made some changes to the item icon dumper screen because it wasnt getting all the items